--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,13 +1,15 @@
 <div class="relative mx-3 mb-3">
-  <label for="search" class="sr-only">Neue Aufgabe hinzufügen</label>
+  <form [formGroup]="searchForm">
+    <label for="search" class="sr-only">Neue Aufgabe hinzufügen</label>
 
-  <input
-    type="text"
-    id="search"
-    placeholder="Suche nach..."
-    [(ngModel)]="searchValue"
-    class="w-full rounded-md border-gray-200 py-2.5 pe-10 shadow-sm sm:text-sm"
-  />
+    <input
+      type="text"
+      id="search"
+      placeholder="Suche nach..."
+      formControlName="searchValue"
+      class="w-full rounded-md border-gray-200 py-2.5 pe-10 shadow-sm sm:text-sm"
+    />
+  </form>
 
   <span class="absolute inset-y-0 end-0 grid w-10 place-content-center">
     <button type="button" class="text-gray-600 hover:text-gray-700">
