Add deployment configuration and update navigation links; refactor todo service and list component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="flex items-center gap-4">
-        <app-button-link href="/todo-anlegen" label="Neu"></app-button-link>
+        <app-button-link href="todo-anlegen" label="Neu"></app-button-link>
       </div>
     </div>
   </div>
