--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -3,7 +3,7 @@
     <div class="flex">
       <div class="group flex-1">
         <a
-          href="/"
+          href=""
           class="mx-auto flex w-full items-end justify-center border-b-2 border-transparent px-4 pt-2 text-center text-gray-500"
         >
           <span class="block px-1 pb-2 pt-1">
@@ -17,7 +17,6 @@
           class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-blue-700 text-white disabled:bg-blue-500"
           aria-label="Check"
           (click)="todoService.completeSelectedTodos()"
-          [disabled]="(todoService.getSelectedTodos$ | async)!.length === 0"
         >
           <i class="fas fa-check"></i>
         </button>
