--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,27 +1,25 @@
 <div class="flex w-full justify-between border-b-2 p-2 text-left">
-  <div class="flex">
-    @if (!todo?.completed) {
-      <div class="me-4 ms-2 flex items-center">
-        <input
-          type="checkbox"
-          class="size-4 rounded border-gray-300 dark:border-gray-600 dark:bg-gray-800 dark:ring-offset-gray-900"
-          id="checkbox"
-          [checked]="todo?.selected"
-          (click)="toggleTodo()"
-        />
-      </div>
-    }
-    <div>
-      <strong class="font-medium text-gray-900"> {{ todo?.title }} </strong>
-      <p class="mt-1 text-pretty text-sm text-gray-700">
-        {{ todo?.description }}
-      </p>
-    </div>
-  </div>
+	<div class="flex">
+		@if (!todo?.completed) {
+			<div class="me-4 ms-2 flex items-center">
+				<input
+					type="checkbox"
+					class="size-4 rounded border-gray-300 dark:border-gray-600 dark:bg-gray-800 dark:ring-offset-gray-900"
+					id="checkbox"
+					[checked]="todo?.selected"
+					(click)="toggleTodo()"
+				/>
+			</div>
+		}
+		<div>
+			<strong class="font-medium text-gray-900"> {{ todo?.title }} </strong>
+			<p class="mt-1 text-pretty text-sm text-gray-700">
+				{{ todo?.description }}
+			</p>
+		</div>
+	</div>
 
-  @if (todo?.deadline) {
-    <div class="text-sm text-gray-500">
-      Fälligkeit: {{ todo?.deadline | date }}
-    </div>
-  }
+	@if (todo?.dueDate) {
+		<div class="text-sm text-gray-500">Fälligkeit: {{ todo?.dueDate | date }}</div>
+	}
 </div>
