--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,34 +1,80 @@
-<div class="relative mx-3 mb-3">
-  <form [formGroup]="searchForm">
-    <label for="search" class="sr-only">Neue Aufgabe hinzufügen</label>
+<form [formGroup]="searchForm" class="mx-3 mb-3 flex gap-2">
+	<label for="simple-search" class="sr-only">Search</label>
+	<div class="relative w-full">
+		<div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+			<svg
+				class="w-5 h-5 text-gray-800"
+				aria-hidden="true"
+				xmlns="http://www.w3.org/2000/svg"
+				width="24"
+				height="24"
+				fill="none"
+				viewBox="0 0 24 24"
+			>
+				<path
+					stroke="currentColor"
+					stroke-linecap="round"
+					stroke-width="2"
+					d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"
+				/>
+			</svg>
+		</div>
+		<input
+			type="text"
+			id="simple-search"
+			class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5"
+			placeholder="Suche nach..."
+			formControlName="searchValue"
+			required
+		/>
+	</div>
+	<button
+		id="dropdownDefaultButton"
+		data-dropdown-toggle="dropdown"
+		class="p-2.5 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
+		type="button"
+	>
+		<svg
+			class="w-5 h-5 text-white"
+			aria-hidden="true"
+			xmlns="http://www.w3.org/2000/svg"
+			width="24"
+			height="24"
+			fill="none"
+			viewBox="0 0 24 24"
+		>
+			<path
+				stroke="currentColor"
+				stroke-linecap="round"
+				stroke-width="2"
+				d="M18.796 4H5.204a1 1 0 0 0-.753 1.659l5.302 6.058a1 1 0 0 1 .247.659v4.874a.5.5 0 0 0 .2.4l3 2.25a.5.5 0 0 0 .8-.4v-7.124a1 1 0 0 1 .247-.659l5.302-6.059c.566-.646.106-1.658-.753-1.658Z"
+			/>
+		</svg>
+	</button>
+</form>
 
-    <input
-      type="text"
-      id="search"
-      placeholder="Suche nach..."
-      formControlName="searchValue"
-      class="w-full rounded-md border-gray-200 py-2.5 pe-10 shadow-sm sm:text-sm"
-    />
-  </form>
-
-  <span class="absolute inset-y-0 end-0 grid w-10 place-content-center">
-    <button type="button" class="text-gray-600 hover:text-gray-700">
-      <span class="sr-only">Search</span>
-
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="size-4"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
-        />
-      </svg>
-    </button>
-  </span>
+<!-- Dropdown menu -->
+<div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
+	<ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownDefaultButton">
+		<li>
+			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortByPriority()">
+				Priorität
+			</button>
+		</li>
+		<li>
+			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortByDueDate()">
+				Fälligkeitsdatum
+			</button>
+		</li>
+		<li>
+			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortByCreateDate()">
+				Erstellungsdatum
+			</button>
+		</li>
+		<li>
+			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortBySelection()">
+				Auswahl
+			</button>
+		</li>
+	</ul>
 </div>
