--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,31 +1,34 @@
-<button class="w-full border-b-2 p-2 text-left" (click)="toggleTodo()">
-	<div class="flex">
-		@if (!todo?.completed) {
-			<div class="me-4 ms-2 flex items-center">
-				<input
-					type="checkbox"
-					class="size-4 rounded border-gray-300 dark:border-gray-600 dark:bg-gray-800 dark:ring-offset-gray-900"
-					id="checkbox"
-					[checked]="todo?.selected"
-				/>
+@if (todo) {
+	<button class="w-full border-b-2 p-2 text-left" (click)="toggleTodo()">
+		<div class="flex">
+			@if (!todo.completed) {
+				<div class="me-4 ms-2 flex items-center">
+					<input
+						type="checkbox"
+						class="size-4 rounded border-gray-300 dark:border-gray-600 dark:bg-gray-800 dark:ring-offset-gray-900"
+						id="checkbox"
+						[checked]="todo.selected"
+					/>
+				</div>
+			}
+			<div>
+				<strong class="font-medium text-gray-900"> {{ todo.title }} </strong>
+				<p class="mt-1 text-pretty text-sm text-gray-700">
+					{{ todo.description }}
+				</p>
 			</div>
-		}
-		<div>
-			<strong class="font-medium text-gray-900"> {{ todo?.title }} </strong>
-			<p class="mt-1 text-pretty text-sm text-gray-700">
-				{{ todo?.description }}
-			</p>
-		</div>
 
-		<div class="ms-auto">
-			<p class="text-pretty text-right text-sm text-gray-700">
-				Fälligkeit: <br />
-				{{ todo?.dueDate | date: 'dd.M.yyyy' }}
-			</p>
+			<div class="ms-auto">
+				<p class="text-pretty text-right text-sm text-gray-700">
+					Fälligkeit: <br />
+					{{ todo.dueDate | date: 'dd.M.yyyy' }}
+				</p>
 
-			<div class="text-end">
-				<app-todo-item-priority [priorityLevel]="todo?.priorityLevel"></app-todo-item-priority>
+				<div class="text-end">
+					<app-todo-item-priority [priorityLevel]="todo.priorityLevel"></app-todo-item-priority>
+				</div>
 			</div>
 		</div>
-	</div>
-</button>
+		{{ todo.priorityLevel }}
+	</button>
+}
