--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,9 +1,9 @@
 <main>
-  @for (todo of todos$ | async; track $index) {
-    <app-todo-item [todo]="todo"></app-todo-item>
-  }
+	@for (todo of todos$ | async; track todo.id) {
+		<app-todo-item [todo]="todo"></app-todo-item>
+	}
 
-  @if ((todos$ | async)?.length === 0; as todos) {
-    <p class="mt-3 text-center text-gray-500">Keine Aufgaben gefunden</p>
-  }
+	@if ((todos$ | async)?.length === 0; as todos) {
+		<p class="mt-3 text-center text-gray-500">Keine Aufgaben gefunden</p>
+	}
 </main>
