--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,10 +6,21 @@
 					{{ title }}
 				</h1>
 			</div>
-
-			<div class="flex items-center gap-4">
-				<app-button-link href="todo-anlegen" label="Neu"></app-button-link>
-			</div>
+			@if (todoService.getSelectedCount() > 0) {
+				<div>
+					<button
+						class="text-center bg-blue-700 font-medium focus-within:ring-4 focus-within:outline-none inline-flex items-center justify-center px-3 py-2 text-xs text-white bg-primary-700 hover:bg-primary-800 rounded-lg"
+						(click)="todoService.completeSelectedTodos()"
+					>
+						<span
+							class="flex-shrink-0 rounded-full w-3.5 h-3.5 inline-flex items-center justify-center me-2 text-blue-500 bg-white text-xs font-semibold text-primary-800"
+						>
+							{{ todoService.getSelectedCount() }}
+						</span>
+						Abschließen
+					</button>
+				</div>
+			}
 		</div>
 	</div>
 	@if (showSearchbar) {
