Add priority selection component to todo creation form

--- a/src/app/todo-create/todo-create.component.html
+++ b/src/app/todo-create/todo-create.component.html
@@ -1,49 +1,54 @@
 <form [formGroup]="todoForm" (ngSubmit)="submit()">
 	<div class="grid mx-4 gap-6 m-6 md:grid-cols-2">
 		<div>
-			<label for="title" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-				>Titel</label
-			>
+			<label for="title" class="block mb-2 text-sm font-medium text-gray-900">Titel</label>
 			<input
 				type="text"
 				id="title"
-				class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+				class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
 				placeholder="Titel eingeben"
 				formControlName="title"
 				required
 			/>
 		</div>
 		<div>
-			<label for="Beschreibung" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+			<label for="Beschreibung" class="block mb-2 text-sm font-medium text-gray-900"
 				>Beschreibung</label
 			>
 			<input
 				type="text"
 				id="Beschreibung"
-				class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+				class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
 				placeholder="Beschreibung eingeben"
 				formControlName="description"
 				required
 			/>
 		</div>
 		<div>
-			<label for="dueDate" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+			<label for="dueDate" class="block mb-2 text-sm font-medium text-gray-900"
 				>Fälligkeitsdatum</label
 			>
 			<input
 				type="date"
 				id="dueDate"
-				class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+				class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
 				required
 				formControlName="dueDate"
 			/>
+		</div>
+		<div>
+			<label for="dueDate" class="block mb-2 text-sm font-medium text-gray-900">Priorität</label>
+			<app-priority
+				formControlName="priorityLevel"
+				(priorityChange)="onPriorityChange($event)"
+			></app-priority>
 		</div>
 	</div>
 
 	<button
 		type="submit"
 		[disabled]="!todoForm.valid"
-		class="text-white bg-blue-700 mx-4 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+		class="text-white disabled:bg-blue-500 bg-blue-700 mx-4 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm sm:w-auto px-5 py-2.5 text-center"
 	>
 		Aufgabe anlegen
 	</button>
