Refactor priority component to simplify change handlers and remove unused event binding

--- a/src/app/todo-create/todo-create.component.html
+++ b/src/app/todo-create/todo-create.component.html
@@ -38,10 +38,7 @@
 		</div>
 		<div>
 			<label for="dueDate" class="block mb-2 text-sm font-medium text-gray-900">Priorität</label>
-			<app-priority
-				formControlName="priorityLevel"
-				(priorityChange)="onPriorityChange($event)"
-			></app-priority>
+			<app-priority formControlName="priorityLevel"></app-priority>
 		</div>
 	</div>
 
