--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,4 @@
-<div
-	class="fixed bottom-0 left-0 z-50 w-full h-16 bg-white border-t border-gray-200 dark:bg-gray-700 dark:border-gray-600"
->
+<div class="sticky w-full z-50 border-gray-200 bottom-0 start-0 h-16 bg-white border-t">
 	<div class="font-medium grid max-w-lg mx-auto grid-cols-3 h-16">
 		<a
 			routerLink="/"
