--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
 					{{ title }}
 				</h1>
 			</div>
-			@if (todoService.getSelectedCount() > 0) {
+			@if (showCompleteBtn && todoService.getSelectedCount() > 0) {
 				<div>
 					<button
 						class="text-center bg-blue-700 font-medium focus-within:ring-4 focus-within:outline-none inline-flex items-center justify-center px-3 py-2 text-xs text-white bg-primary-700 hover:bg-primary-800 rounded-lg"
