--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -5,7 +5,7 @@
 				<div class="me-4 ms-2 flex items-center">
 					<input
 						type="checkbox"
-						class="size-4 rounded border-gray-300 dark:border-gray-600 dark:bg-gray-800 dark:ring-offset-gray-900"
+						class="size-4 rounded border-gray-300"
 						id="checkbox"
 						[checked]="todo.selected"
 					/>
