Add toast component and service for user notifications; integrate into todo service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,7 @@
 
 	<router-outlet></router-outlet>
 
+	<app-toast class="sticky bottom-16 mx-auto max-w-2xl"></app-toast>
+
 	<app-navigation></app-navigation>
 </div>
