--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,27 +1,29 @@
-<div class="mx-auto max-w-screen-xl px-3 py-6 sm:px-6 sm:py-12 lg:px-8">
-	<div class="flex justify-between gap-4 md:flex-row md:items-center md:justify-between">
-		<div>
-			<h1 class="text-2xl font-bold text-gray-900 sm:text-3xl">
-				{{ title }}
-			</h1>
-		</div>
-		@if (showCompleteBtn && todoService.getSelectedCount() > 0) {
+<div class="border-b border-gray-200 sticky top-0 bg-gray-50 z-50">
+	<div class="mx-auto max-w-screen-xl px-3 py-6 sm:px-6 sm:py-12 lg:px-8">
+		<div class="flex justify-between gap-4 md:flex-row md:items-center md:justify-between">
 			<div>
-				<button
-					class="text-center bg-blue-700 font-medium focus-within:ring-4 focus-within:outline-none inline-flex items-center justify-center px-3 py-2 text-xs text-white bg-primary-700 hover:bg-primary-800 rounded-lg"
-					(click)="todoService.completeSelectedTodos()"
-				>
-					<span
-						class="flex-shrink-0 rounded-full w-3.5 h-3.5 inline-flex items-center justify-center me-2 text-blue-500 bg-white text-xs font-semibold text-primary-800"
-					>
-						{{ todoService.getSelectedCount() }}
-					</span>
-					Abschließen
-				</button>
+				<h1 class="text-2xl font-bold text-gray-900 sm:text-3xl">
+					{{ title }}
+				</h1>
 			</div>
-		}
+			@if (showCompleteBtn && todoService.getSelectedCount() > 0) {
+				<div>
+					<button
+						class="text-center bg-blue-700 font-medium focus-within:ring-4 focus-within:outline-none inline-flex items-center justify-center px-3 py-2 text-xs text-white bg-primary-700 hover:bg-primary-800 rounded-lg"
+						(click)="todoService.completeSelectedTodos()"
+					>
+						<span
+							class="flex-shrink-0 rounded-full w-3.5 h-3.5 inline-flex items-center justify-center me-2 text-blue-500 bg-white text-xs font-semibold text-primary-800"
+						>
+							{{ todoService.getSelectedCount() }}
+						</span>
+						Abschließen
+					</button>
+				</div>
+			}
+		</div>
 	</div>
+	@if (showSearchbar) {
+		<app-searchbar></app-searchbar>
+	}
 </div>
-@if (showSearchbar) {
-	<app-searchbar></app-searchbar>
-}
