--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -29,6 +29,7 @@
 		/>
 	</div>
 	<button
+		(click)="isDropdownOpen = !isDropdownOpen"
 		id="dropdownDefaultButton"
 		data-dropdown-toggle="dropdown"
 		class="p-2.5 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
@@ -51,30 +52,45 @@
 			/>
 		</svg>
 	</button>
+	<!-- Dropdown menu -->
+	<div
+		id="dropdown"
+		class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 absolute right-0 top-44"
+		[ngClass]="{ hidden: !isDropdownOpen }"
+	>
+		<ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownDefaultButton">
+			<li>
+				<button
+					class="block px-4 py-2 hover:bg-gray-100 w-full text-left"
+					(click)="todoService.sortByPriority(); isDropdownOpen = false"
+				>
+					Priorität
+				</button>
+			</li>
+			<li>
+				<button
+					class="block px-4 py-2 hover:bg-gray-100 w-full text-left"
+					(click)="todoService.sortByDueDate(); isDropdownOpen = false"
+				>
+					Fälligkeitsdatum
+				</button>
+			</li>
+			<li>
+				<button
+					class="block px-4 py-2 hover:bg-gray-100 w-full text-left"
+					(click)="todoService.sortByCreateDate(); isDropdownOpen = false"
+				>
+					Erstellungsdatum
+				</button>
+			</li>
+			<li>
+				<button
+					class="block px-4 py-2 hover:bg-gray-100 w-full text-left"
+					(click)="todoService.sortBySelection(); isDropdownOpen = false"
+				>
+					Auswahl
+				</button>
+			</li>
+		</ul>
+	</div>
 </form>
-
-<!-- Dropdown menu -->
-<div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
-	<ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownDefaultButton">
-		<li>
-			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortByPriority()">
-				Priorität
-			</button>
-		</li>
-		<li>
-			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortByDueDate()">
-				Fälligkeitsdatum
-			</button>
-		</li>
-		<li>
-			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortByCreateDate()">
-				Erstellungsdatum
-			</button>
-		</li>
-		<li>
-			<button class="block px-4 py-2 hover:bg-gray-100" (click)="todoService.sortBySelection()">
-				Auswahl
-			</button>
-		</li>
-	</ul>
-</div>
